--- a/GucciBazaar/Web.config
+++ b/GucciBazaar/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Alexandru_Zota\source\repos\GucciBazaar\GucciBazaar\App_Data\GucciBazaar.mdf;Initial Catalog=GucciBazaar;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\Raluca\Documents\IISExpress\Logs\Bazaar\GucciBazaar\App_Data\GucciBazaar.mdf;Initial Catalog=GucciBazaar;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
